--- a/assets/css/gba.css
+++ b/assets/css/gba.css
@@ -18,35 +18,63 @@
 }
 
 #rainbow-logo h1{
+  
   animation: rainbow 4s infinite linear;
   animation-delay: 1s;
+
+  -webkit-animation: rainbow 4s infinite linear;
+  -webkit-animation-delay: 1s;
+
   background: -webkit-linear-gradient(0deg, #ffffff 40%, #85e367 40%, #85e367 45%, #ff52e8 45%, #ff52e8 50%, #ff0151 50%, #ff0151 55%, #f9e52e 55%, #f9e52e 60%, #ffffff 60%);
-  background-position: 300px;
+  position: relative;
+  text-align: center;
   color: #ffffff;
   font-family: 'Asap', sans-serif;
   font-size: 5em;
   font-style: italic;
   font-weight: 700;
   letter-spacing: -5px;
-  left: 50%;
-  margin-bottom: 0;
-  margin-left:auto;
+  width: 300px;
+
+  /* Firefox */
+  left: -moz-calc(50% - 150px);
+  /* WebKit */
+  left: -webkit-calc(50% - 150px);
+  /* Opera */
+  left: -o-calc(50% - 150px);
+  /* Standard */
+  left: calc(50% - 150px);
+
+
+  margin-bottom: 0
   opacity: 1;
   top: 25%;
-  width: 100%;
+  
   -webkit-text-stroke: 1.5px black;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   -webkit-transform: skew(-5deg);
 }
 
-
+#rainbow-logo h2{
+  -webkit-text-stroke: 0.5px black;
+}
 
 @keyframes rainbow {
-  0% {
-    background-position: -290px;
+  from {
+    background-position: -600px;
   }
-  25% {
-    background-position: 300px;
+  to{
+    background-position: 0px;
   }
 }
+
+/* Safari 4.0 - 8.0 */
+@-webkit-keyframes rainbow {
+  from {
+    background-position: -600px;
+  }
+  to{
+    background-position: 0px;
+  }
+} 
