fixed table properties

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -398,7 +398,7 @@ table {
     margin: 1.75em 0;
     width: 100%;
     max-width: 100%;
-    background-color: transparent;
+    /*background-color: transparent;*/
 }
 
 table th,
@@ -424,7 +424,7 @@ table thead:first-child tr:first-child td {
 table tbody + tbody { border-top: #EFEFEF 2px solid; }
 
 table table table { background-color: #FFF; }
-
+/*
 table tbody > tr:nth-child(odd) > td,
 table tbody > tr:nth-child(odd) > th {
     background-color: #F6F6F6;
@@ -434,7 +434,7 @@ table.plain tbody > tr:nth-child(odd) > td,
 table.plain tbody > tr:nth-child(odd) > th {
    background: transparent;
 }
-
+*/
 iframe, .fluid-width-video-wrapper {
     display: block;
     margin: 1.75em 0;
