fixed errors in ghostscan

--- a/post.hbs
+++ b/post.hbs
@@ -54,7 +54,7 @@
                 </div>
             </section>
 
-        {{/author}}
+        {{/primary_author}}
 
             <section class="share">
                 <h4>Share this post</h4>
