--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -19,6 +19,7 @@
     12. Media Queries (Tablet)
     13. Media Queries (Mobile)
     14. Animations
+    15. Dark Mode
 
 */
 
@@ -2276,8 +2277,24 @@ body.page-template .post-title {
     height: 100%;
 }
 
+/* ==========================================================================
+   15. Dark mode
+   ========================================================================== */
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #444;
+    color: #e4e4e4;
+  }
+  a {
+    color: #e39777;
+  }
+  img {
+    filter: grayscale(30%);
+  }
+}
 
 /* ==========================================================================
-   End of file. Animations should be the last thing here. Do not add stuff
+   End of file. Dark mode  should be the last thing here. Do not add stuff
    below this point, or it will probably fuck everything up.
    ========================================================================== */
